feat: gromet be deploy success1

--- a/src/templates/verificationWebTemplate.html
+++ b/src/templates/verificationWebTemplate.html
@@ -26,7 +26,7 @@
         </div>
     <script>
         function redirectToGromet() {
-            window.location.href = "https://gromet-fe.vercel.app/account/login"; 
+            window.location.href = "https://gromet.vercel.app/account/login"; 
         }
     </script>
 </body>
